--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-spinners": "^0.13.8",
     "styled-components": "^6.0.7",
     "sweetalert2": "^11.7.28",
+    "recharts": "^2.8.0",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
